--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -18,7 +18,7 @@
 
     <script src="main.js"></script>
     <script>
-      var app = Elm.Amarcord.Main.init({
+      var app = Elm.Main.init({
         node: document.getElementById("elm-app-is-loaded-here")
       });
     </script>
