--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
 
     <link href="App.css" rel="stylesheet" />
+    <link rel="shortcut icon" href="favicon.png" type="image/png" />
+
 
     <title>AMARCORD</title>
   </head>
