--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -1,36 +1,42 @@
 <!doctype html>
 <html lang="en">
-  <head>
+<head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
 
-    <link href="App.css" rel="stylesheet" />
-    <link rel="shortcut icon" href="favicon.png" type="image/png" />
+    <link href="App.css" rel="stylesheet"/>
+    <link rel="shortcut icon" href="favicon.png" type="image/png"/>
 
+    <script src="uglymol.min.js"></script>
+    <script src="mtz.js"></script>
 
     <title>AMARCORD</title>
-  </head>
-  <body>
-    <div id="elm-app-is-loaded-here"></div>
+</head>
+<body>
+<div id="elm-app-is-loaded-here"></div>
 
-    <script src="main.js"></script>
-    <script>
-      currentLocalStorage = localStorage.getItem('local-storage');
-      var app = Elm.Main.init({
+<script src="main.js"></script>
+<script src="uglymol-custom-element.js"></script>
+<script>
+    currentLocalStorage = localStorage.getItem('local-storage');
+    var app = Elm.Main.init({
         node: document.getElementById("elm-app-is-loaded-here"),
         flags: typeof currentLocalStorage !== "undefined" ? currentLocalStorage : null
-      });
+    });
 
-      app.ports.storeLocalStorage.subscribe(function(localStorageStr) {
+    app.ports.storeLocalStorage.subscribe(function (localStorageStr) {
         localStorage.setItem('local-storage', localStorageStr);
-      });
-    </script>
+    });
+</script>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-  </body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
+</body>
 </html>
